--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
-*{
-   background-color: rgb(0, 0, 0);
+body{
+   background-image: url(background_moon_theme.svg);
+   background-repeat: no-repeat;
+   background-size: cover;
+  
+   
 }
+
+/* *{
+   background-color: rgb(0, 0, 0);
+} */
    /*--------------- navbar *-----------------------------------------------------------------------*/
 .exp{
    margin: auto;
