--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 } */
    /*--------------- navbar *-----------------------------------------------------------------------*/
 .exp{
-   margin: auto;
    height: 60px;
    background-color: rgb(29, 29, 29);
    border-radius: 5px;
@@ -23,7 +22,8 @@ body{
    padding: 2px;
    background: linear-gradient(to right, rgb(1, 159, 43), rgb(132, 0, 255));
 }
-.exp ul{
+
+.navbar .exp ul{
    list-style: none;
    display: flex;
    background-color:rgb(29, 29, 29) ;
@@ -59,8 +59,8 @@ body{
 .menu_container {
    background-color:rgb(29, 29, 29) ;
    padding: 10px 10px 10px 60px;
-   display: inline-block;
    cursor: pointer;
+   display: none;
 }
 /* 3 bars in the menu animation */
  .bar1, .bar2, .bar3 {
@@ -84,60 +84,123 @@ body{
    transform: translate(0, -11px) rotate(45deg);
  }
 
-.exp .menu_container{
-   display: none;
-}
 /**media queries for navigation bar-------**/
-@media screen and (max-width: 1000px){
-   .exp a:not(:first-child){display: none;}
-   .menu_container a.menu_container{
-      float: right;
-      display: block;
-   }
-   
-}
-@media screen and(max-width: 1000px) {
-   .exp.responsive { position: relative;}
-   .exp.exp.responsive a.menu_container{
-      position: absolute;
-      right: 0;
-      top: 0;
-   }
-   .exp.exp.responsive a{
-      float: right;
-      display: block;
-      text-align: left;
-   }
+@media(max-width:650px){
+  .navbar{
+   flex-direction: column;
+   align-items: flex-start;
+  }
+  .menu_container{
+   display: block;
+  }
+  .exp{
+   display: none;
+   width: 100%;
+  }
+  .exp ul{
+   flex-direction: column;
+  }
+  .exp ul li{
+   text-align: center;
+  }
+  .exp ul li a{
+   padding: .5rem 1rem;
+  }
+  .exp.active{
+   display: flex;
+  }
 }
 
-/* cartoon annimation part----------------------------------------------------------------- */
+/* cartoon annimation part----------------------------------- */
  /* .cartoon_view_navbar ul li{
     font-size: large;
      background-color:rgb(29, 29, 29) ;
      position: relative;
  } */
 
- .navbar{
+
+/*  Welcome text ---------------------------------------------------------
+ Design------------------------------------------------------ */
+ h2{
    display: flex;
-   justify-content: space-between;
+   min-height: 60vh;
+   font-family: Arial, Helvetica, sans-serif;
+   justify-content: center;
    align-items: center;
+   font-size: 14vh;
+   color: rgb(26, 255, 0) ;
+   -webkit-text-stroke: 0.3vw #ffffff;
+   text-transform: uppercase;
+
+ }
+ h2::before{
+   content: attr(data-text);
+   position: absolute;
+   width: 50%;  
+   height: 100;
+   -webkit-text-stroke: 0vw  rgb(57, 57, 57);
+   border-right:  4px solid rgb(55, 255, 0);
+   overflow: hidden;
+   animation: animate 6s linear infinite;
+ }
+ @keyframes animate {
+   0%, 10%, 100%{
+      width: 0;
+   }
+   70%, 90%{
+      width: 100%;
+   }
+ }
+
+ /*------------------------------------------------- EXPLORE SECTION ----------------------*/
+ .explore_section{
+   color: white;
+   width: 100%;
+   height:auto;
+   padding-bottom: 20px;
+   /* background-color:  white; */
+   background-image: linear-gradient(to right top, #6bd16d, #00d19c, #00cdc7, #00c5e4, #0fbaf1, #35b0f5, #57a5f6, #7699f1, #6f8df7, #6d80fa, #7171fc, #7a5ffb);
+ }
+ .explore_section h1{
+   color: black;
+   text-align: center;
+   padding: 10px 0;
+   font-family: sans-serif;
+ }
+ .elplore_contents_all{
+   display: flex;
+   width: 80%;
+   height: auto;
+   flex-wrap: wrap;
+   margin: auto;
+   justify-content: space-around;
+ }
+ .explore_items{
+   padding: 20px;
+   margin: 10px 10px 10px 10px;
+   min-width: 250px;
+   max-width: 300px;
+   border-radius: 15px 2px 15px 2px;
+   color: white;
+   margin: 10px 0;
+   flex-basis: 30%;
+   box-shadow: 0px 0px 5px 1px rgb(38, 255, 0);
+   background-image: linear-gradient(to right top, #000000, #131313, #1f1f1f, #2c2c2c, #393939, #3d3d41, #3e424a, #3d4853, #254854, #00484d, #00463b, #004322);
+ }
+ .explore_items img{
+   height: 100px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 10px 2px 10px 2px;
+ }
+ .explore_items button{
+   display: flex;
+   margin: auto;
+   padding: 5px 5px 5px 5px;
+   border-radius: 5px;
+   background-color: rgb(107, 107, 107);
    color: white;
  }
- .brand_title{
-   font-size: 1.5rem;
-   margin: 0.5rem;
- }
- .navbar_links ul{
-margin: 0;
-padding: 0;
-display: flex;
- }
-.navbar_links li{
-   list-style: none;
-}
-.navbar_linksli a{
-   text-decoration: none;
-   color: white;
-   padding: 1rem;
-   
-}
+ /*  Services section ------------------------------------- */
+ 
