--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+*{
+  color: #fff;
+  cursor: default; 
+}
+
 body{
-   background-image: url(background_moon_theme.svg);
-   background-repeat: no-repeat;
-   background-size: cover;
-  
-   
+  background: #000000;
 }
 
 /*--------------- navbar *-----------------------------------------------------------------------*/
@@ -338,7 +339,330 @@ body{
 
  /* ----------------break----------- */
  .break{
-   height: 2px;
+   height: 3px;
    background: linear-gradient(to right, rgb(1, 159, 43), rgb(132, 0, 255));
  }
  
+ #portfolio_header{
+  text-align: center;
+ }
+ /* header{
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   margin: 0 10% 0 10%;
+ }
+ 
+ header h1{
+   -webkit-text-stroke: 2px white;
+   color: transparent;
+   cursor: default;
+   font-size: 2.1em;
+   transition: 1s;
+   opacity: 0;
+   animation: slideRight 1s ease forwards;
+ }
+ 
+ header h1:hover{
+   color: white;
+   text-shadow: 0 0 40px white;
+ } */
+ .navbar{
+  padding-left: 4%;
+ }
+ .navbar a{
+   display: inline-block;
+   margin-left: 30px;
+   text-decoration: none;
+   font-size: 1.2em;
+   transition: .5s;
+   cursor: pointer;
+   opacity: 0;
+   animation: slideBottom 1s ease forwards;
+   animation-delay: calc(.2s * var(--i));
+ }
+ 
+ .navbar a:hover,
+ .navbar .active{
+   color: #6bdcff;
+ }
+ 
+ .navbar a:hover{
+   text-shadow: 0 0 40px #9ee8ff;
+ }
+ 
+ section{
+   margin: 5% 10%;
+   display: flex;
+   align-items: center;
+ }
+ 
+ section h2{
+   font-size: 2em;
+   margin: 0 0 0 0;
+   opacity: 0;
+   animation: slideLeft 1s ease forwards 1.4s;
+   -webkit-text-stroke: 2px white;
+   color: transparent;
+   transition: .5s;
+ }
+ 
+ section h3{
+   opacity: 0;
+   animation: slideRight 1s ease forwards;
+   animation-delay: calc(.2s * var(--i))
+ }
+ 
+ section p{
+   font-size: 0.9em;
+   opacity: 0;
+   animation: slideTop 1s ease forwards 1.8s;
+ }
+ 
+ section img{
+   max-width: 300px;    
+   max-height: 300px;
+   opacity: 0;
+   animation: slideTop 1s ease forwards 2s;
+ }
+ 
+ section .img{
+   animation: animate 5s ease-in-out infinite 3s;
+ }
+ 
+ section span a{
+   color: #0ef;
+   text-decoration: none;
+   transition: .5s;
+ }
+ 
+ section span a:hover{
+   text-shadow: 0 0 40px #fff;
+   color: white;
+ }
+ 
+ @keyframes slideBottom{
+   from{
+     transform: translateY(-50px);
+     opacity: 0;
+   }
+   
+   to{
+     transform: translateY(0px);
+     opacity: 1;
+   }
+ }
+ 
+ @keyframes slideTop{
+   from{
+     transform: translateY(100px);
+     opacity: 0;
+   }
+   
+   to{
+     transform: translateY(0px);
+     opacity: 1;
+   }
+ }
+ 
+ @keyframes slideRight{
+   from{
+     transform: translateX(-100px);
+     opacity: 0;
+   }
+   
+   to{
+     transform: translateX(0px);
+     opacity: 1;
+   }
+ }
+ 
+ @keyframes slideLeft{
+   from{
+     transform: translateX(100px);
+     opacity: 0;
+   }
+   
+   to{
+     transform: translateX(0px);
+     opacity: 1;
+   }
+ }
+ 
+ @keyframes animate{
+   0%{
+     transform: translateY(0);
+   }
+   
+   50%{
+     transform: translateY(50px);
+   }
+   
+   100%{
+     transform: translateY(0);
+   }
+ }
+
+
+ 
+ footer {
+  position: absolute;
+
+  bottom: 0;
+
+  left: 0;
+
+  right: 0;
+
+  background: #111;
+
+  height: auto;
+
+  width: 100vw;
+
+  padding-top: 40px;
+
+  color: #fff;
+}
+
+.footer-content {
+  display: flex;
+
+  align-items: center;
+
+  justify-content: center;
+
+  flex-direction: column;
+
+  text-align: center;
+}
+
+.footer-content h3 {
+  font-size: 2.1rem;
+
+  font-weight: 500;
+
+  text-transform: capitalize;
+
+  line-height: 3rem;
+}
+
+.footer-content p {
+  max-width: 500px;
+
+  margin: 10px auto;
+
+  line-height: 28px;
+
+  font-size: 14px;
+
+  color: #cacdd2;
+}
+
+.socials {
+  list-style: none;
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: center;
+
+  margin: 1rem 0 3rem 0;
+}
+
+.socials li {
+  margin: 0 10px;
+}
+
+.socials a {
+  text-decoration: none;
+
+  color: #fff;
+
+  padding: 5px;
+}
+
+.socials a i {
+  font-size: 1.1rem;
+
+  width: 20px;
+
+  transition: color 0.4s ease;
+}
+
+.socials a:hover i {
+  color: aqua;
+}
+
+.footer-bottom {
+  background: #000;
+
+  width: 100vw;
+
+  padding: 20px;
+
+  padding-bottom: 40px;
+
+  text-align: center;
+}
+
+.footer-bottom p {
+  float: left;
+
+  font-size: 14px;
+
+  word-spacing: 2px;
+}
+
+.footer-bottom p a {
+  color: #ccc;
+
+  font-size: 16px;
+
+  text-decoration: none;
+}
+
+.footer-bottom span {
+  text-transform: uppercase;
+}
+
+.footer-menu {
+  float: right;
+}
+
+.footer-menu ul {
+  display: flex;
+}
+
+.footer-menu ul li {
+  padding-right: 10px;
+
+  display: block;
+}
+
+.footer-menu ul li a {
+  color: #cfd2d6;
+
+  text-decoration: none;
+}
+
+.footer-menu ul li a:hover {
+  color: #27bcda;
+}
+
+@media (max-width: 500px) {
+  .footer-bottom p {
+    float: none;
+  }
+
+  .footer-menu ul {
+    display: flex;
+
+    margin-top: 10px;
+
+    margin-bottom: 20px;
+
+    text-align: center;
+  }
+}
