--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,10 @@
-body{
+ body{
    background-color: black;
-}
+  cursor:default;
+  font-family: 'Courier New', Courier, monospace;
+  
+} 
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -25,8 +29,7 @@ header {
    justify-content: space-between;
    align-items: center;
    margin: 0 10% 0 10%;
-   font-family: 'Courier New', Courier, monospace;
- }
+   }
  header h1 {
    -webkit-text-stroke: 1.5px rgb(255, 255, 255);
    font-family: "Arial Black", sans-serif;
@@ -59,8 +62,7 @@ header h1:hover {
  }
 
  .portfolio_div {
-   font-family: 'Courier New', Courier, monospace;
-   margin: 5% 10%;
+     margin: 5% 10%;
    display: flex;
    align-items: center;
    color: white;
@@ -73,7 +75,9 @@ header h1:hover {
   -webkit-text-stroke: 1px rgb(211, 211, 211);
    color: transparent;
  }
-
+.imaz{
+  height: 60px;
+}
  section span a {
    color: #0ef;
    text-decoration: none;
@@ -93,7 +97,7 @@ header h1:hover {
   text-shadow: 0 0 20px  #6bff77;
  }
  section p{
-  max-width: 1000px;
+  max-width: 800px;
   background-color: #151515;
   border-radius: 5px;
   padding: 40px;
@@ -101,7 +105,6 @@ header h1:hover {
  }
  @media screen and (max-width: 500px) {
   .portfolio_div {
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 2% 2%;
     display: flex;
     align-items: center;
@@ -117,6 +120,19 @@ header h1:hover {
     padding: 20px;
     opacity: 0.9;
    }
+   .navbar a {
+    display:grid;
+    margin-left: 30px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2em;
+    transition: .5s;
+    cursor: pointer;
+ }
+ header{
+  padding-top: 20px;
+ }
 }
 
  .break{
@@ -125,9 +141,11 @@ header h1:hover {
 }
 /* cardd------------ */
 .card {
-  width: 300px;
-  height: 200px;
-  background-color: #ffffff;
+  width: 50%;
+  height: 40%;
+  padding: 0 0 19px 20px;
+  background-color: #1a1a1a;
+  color: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
   padding: 20px;
@@ -139,9 +157,11 @@ header h1:hover {
   z-index: 999;
 }
 .card button{
-  background-color: #000000;
-  color: #b8ffbe;
-  border-radius: 3px;
+  background-color: #9cffde;
+  color: #1b1b1b;
+  border-radius: 7px;
+  float: right;
+
 }
  /* footer-- and lets connect section */
  footer {
@@ -163,15 +183,14 @@ header h1:hover {
   background-repeat: no-repeat;
   background-position: right;
   background-size:contain;
-  font-family: 'Courier New', Courier, monospace;
-}
+ }
 
-.footer-content h3 {
+ h3 {
   color: white;
-  font-size: 2.1rem;
+  font-size: 1.8rem;
   font-weight: 500;
   text-transform: capitalize;
-  line-height: 3rem;
+  line-height: 0.5rem;
   font-weight: bold;
 }
 
@@ -251,8 +270,7 @@ header h1:hover {
 .footer-menu {
   float: right;
   padding: auto;
-   font-family: 'Courier New', Courier, monospace;
-   font-weight: 200;
+     font-weight: 200;
 }
 
 .footer-menu ul {
@@ -271,4 +289,49 @@ header h1:hover {
 .footer-menu ul li a:hover {
   color: #2769da;
   font-weight: bold;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 10px;
+  resize: vertical;
+ }
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: rgb(28, 28, 28);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #01ff0e;
+  border-radius: 8px;
+  transition: 1s;
+  color: #000000;
+  border-color: #ffcc01 2px;
+}
+
+.container {
+   background-color: black;
+  max-width: 500px;  
+  padding-left: 10%;
+  padding-bottom: 25px;
+  border-radius: 5px;
+}
+
+
+/* Project-  Section-------------------------------------------------------------------
+----------------------------------------------------------------------------------
+---------------------------------------------------------------- ----------------*/
+.project_class h3{
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
