--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,6 @@
  body{
-   background-color: black;
-  cursor:default;
+  background-color: black;
+  cursor:auto;
   font-family: 'Courier New', Courier, monospace;
   
 } 
@@ -200,11 +200,14 @@ header h1:hover {
   opacity: 90%;
   border-radius: 10px;
   padding: 10px;
-  max-width: 600px;
+  max-width: 800px;
   margin: 10px auto;
   line-height: 28px;
   font-size: 1rem;
   color: #d1ffca;
+}
+.footer-content li{
+  list-style: none;
 }
 
 .socials {
@@ -331,7 +334,17 @@ input[type=submit]:hover {
 /* Project-  Section-------------------------------------------------------------------
 ----------------------------------------------------------------------------------
 ---------------------------------------------------------------- ----------------*/
-.project_class h3{
-  color: rgb(255, 255, 255);
+.project_class{
+  color: white;
   text-align: center;
 }
+.project_class iframe{
+  height: 300px;
+  width: 500px;
+  padding: 10px;
+}
+.iframe-div{
+  display: flex;
+  list-style: none;
+}
+
