--- a/portfolio.css
+++ b/portfolio.css
@@ -261,18 +261,48 @@ h3{
 /* Skills  ------------------------------------------
 ----------------------------------------------------- */
 .skills_section{
-  background:rgb(0, 0, 0);
-  padding: 10px 150px 10px 150px;
-}
-.skills_section .card{
-  height: 150px;
-  width: 150px;
-  background-color: rgb(47, 47, 47);
-  border-radius: 7px;
-}
-.skills_section .card h4{
   text-align: center;
   color: white;
+  padding-top: 20px;
+  padding-bottom: 90px;
+}
+.skills_section h2{
+  text-align: center;
+  color: rgb(238, 227, 255);
+  cursor: none;
+}
+
+
+.all-skills{
+  height: auto;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.card{
+  height: 170px;
+  width: 170px;
+  text-align: center;
+  background-color: rgb(23, 23, 23);
+  color: white;
+  border-radius: 7px;
+  margin-left: 100px;
+  margin-right: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  border: 1px solid rgb(26, 49, 24);
+}
+.card ion-icon{
+  padding-top: 40px;
+  font-size: 40px;
+  color: rgb(128, 158, 255);
+}
+.all-skills :hover {
+  color: #b8f8bf;
+  background-color: #222222;
 }
 
 /* Lets connect----------------
